<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/loginTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/passwordReset" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotEmail"
        android:layout_below="@id/loginTittle"
        android:textColorHint="#000"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/forgotPasswordBtn"
        android:hint="@string/resetBtn"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/dark_blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forgotEmail"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:text="@string/toLogin"
        android:layout_below="@id/forgotPasswordBtn"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/loginBtn"
        android:layout_below="@id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="rememberedPassword"
        />

</RelativeLayout>