<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/loginTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:drawableLeft="@drawable/sign_icon"
        android:drawablePadding="10dp"
        android:text="@string/login_tittle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/sign"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:textSize="16sp"
        android:onClick="CreateAccount"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmail"
        android:layout_below="@id/loginTittle"
        android:textColorHint="#000"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPassword"
        android:layout_below="@id/loginEmail"
        android:textColorHint="#000"
        android:background="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/loginBtn"
        android:hint="@string/loginBtn"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/dark_blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginPassword"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:text="@string/toForgotPass"
        android:layout_below="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:onClick="forgotPassword"
        android:textStyle="bold"
        />



</RelativeLayout>