<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/signTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/sign_icon"
            android:drawablePadding="10dp"
            android:text="@string/sign_tittle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/loginBtn"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_marginRight="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:onClick="tryLogin"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:layout_below="@id/signTittle"
            android:textColorHint="#000"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:layout_below="@id/firstName"
            android:textColorHint="#000"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmail"
            android:layout_below="@id/lastName"
            android:textColorHint="#000"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signPassword"
            android:layout_below="@id/loginEmail"
            android:textColorHint="#000"
            android:background="@color/white"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linkedIn"
            android:layout_below="@id/signPassword"
            android:textColorHint="#000"
            android:background="@color/white"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/linked"/>
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workingStatus"
            android:layout_below="@id/linkedIn"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workStatus" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alumnusPic"
            android:layout_below="@id/workingStatus"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/photo" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/registerBtn"
            android:hint="@string/sign"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/dark_blue"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/alumnusPic"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginText"
            android:text="@string/toSignUp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/registerBtn"
            android:textSize="16sp"

            android:layout_marginBottom="50dp"/>


    </RelativeLayout>

</ScrollView>
